@@ -1367,6 +1367,7 @@ function ShowScenes()
 
   var htmlcontent = '';
   var bHaveAddedDevider = false;
+  var bAllowWidgetReorder=true;
 
   var tophtm="";
   if (window.my_config.userrights==2) {
@@ -1389,6 +1390,7 @@ function ShowScenes()
      dataType: 'json',
      success: function(data) {
       if (typeof data.result != 'undefined') {
+		bAllowWidgetReorder=data.AllowWidgetOrdering;
         $.each(data.result, function(i,item){
           if (j % 3 == 0)
           {
@@ -1487,30 +1489,32 @@ function ShowScenes()
   $('#scenecontent').html(tophtm+htmlcontent);
   $('#scenecontent').i18n();
 
-	if (window.my_config.userrights==2) {
-		if (window.myglobals.ismobileint==false) {
-			$("#scenecontent .span4").draggable({
-					drag: function() {
-						clearInterval($.myglobals.refreshTimer);
-						$.devIdx=$(this).attr("id");
-						$(this).css("z-index", 2);
-					},
-					revert: true
-			});
-			$("#scenecontent .span4").droppable({
-					drop: function() {
-						var myid=$(this).attr("id");
-						$.devIdx.split(' ');
-						$.ajax({
-							 url: "json.htm?type=command&param=switchsceneorder&idx1=" + myid + "&idx2=" + $.devIdx,
-							 async: false, 
-							 dataType: 'json',
-							 success: function(data) {
-									ShowScenes();
-							 }
-						});
-					}
-			});
+	if (bAllowWidgetReorder==true) {
+		if (window.my_config.userrights==2) {
+			if (window.myglobals.ismobileint==false) {
+				$("#scenecontent .span4").draggable({
+						drag: function() {
+							clearInterval($.myglobals.refreshTimer);
+							$.devIdx=$(this).attr("id");
+							$(this).css("z-index", 2);
+						},
+						revert: true
+				});
+				$("#scenecontent .span4").droppable({
+						drop: function() {
+							var myid=$(this).attr("id");
+							$.devIdx.split(' ');
+							$.ajax({
+								 url: "json.htm?type=command&param=switchsceneorder&idx1=" + myid + "&idx2=" + $.devIdx,
+								 async: false, 
+								 dataType: 'json',
+								 success: function(data) {
+										ShowScenes();
+								 }
+							});
+						}
+				});
+			}
 		}
 	}
 	$.myglobals.refreshTimer = setInterval(RefreshScenes, 10000);
