@@ -772,6 +772,7 @@ function ShowUtilities()
   
   var htmlcontent = '';
   var bHaveAddedDevider = false;
+	var bAllowWidgetReorder=true;
 
   var tophtm=
         '\t<table class="bannav" id="bannav" border="0" cellpadding="0" cellspacing="0" width="100%">\n' +
@@ -797,6 +798,7 @@ function ShowUtilities()
       if (typeof data.result != 'undefined') {
 
 		$.FiveMinuteHistoryDays=data["5MinuteHistoryDays"];
+		bAllowWidgetReorder=data.AllowWidgetOrdering;
 
         $.each(data.result, function(i,item){
           if (i % 3 == 0)
@@ -1077,30 +1079,32 @@ function ShowUtilities()
   $('#utilitycontent').html(tophtm+htmlcontent);
   $('#utilitycontent').i18n();
 
-	if (window.my_config.userrights==2) {
-		if (window.myglobals.ismobileint==false) {
-			$("#utilitycontent .span4").draggable({
-					drag: function() {
-						clearInterval($.myglobals.refreshTimer);
-						$.devIdx=$(this).attr("id");
-						$(this).css("z-index", 2);
-					},
-					revert: true
-			});
-			$("#utilitycontent .span4").droppable({
-					drop: function() {
-						var myid=$(this).attr("id");
-						$.devIdx.split(' ');
-						$.ajax({
-							 url: "json.htm?type=command&param=switchdeviceorder&idx1=" + myid + "&idx2=" + $.devIdx,
-							 async: false, 
-							 dataType: 'json',
-							 success: function(data) {
-									ShowUtilities();
-							 }
-						});
-					}
-			});
+	if (bAllowWidgetReorder==true) {
+		if (window.my_config.userrights==2) {
+			if (window.myglobals.ismobileint==false) {
+				$("#utilitycontent .span4").draggable({
+						drag: function() {
+							clearInterval($.myglobals.refreshTimer);
+							$.devIdx=$(this).attr("id");
+							$(this).css("z-index", 2);
+						},
+						revert: true
+				});
+				$("#utilitycontent .span4").droppable({
+						drop: function() {
+							var myid=$(this).attr("id");
+							$.devIdx.split(' ');
+							$.ajax({
+								 url: "json.htm?type=command&param=switchdeviceorder&idx1=" + myid + "&idx2=" + $.devIdx,
+								 async: false, 
+								 dataType: 'json',
+								 success: function(data) {
+										ShowUtilities();
+								 }
+							});
+						}
+				});
+			}
 		}
 	}
 	RefreshTimeAndSun();
